[gd_scene load_steps=3 format=3 uid="uid://cn1wk8x3qw5po"]

[ext_resource type="Script" path="res://scripts/ui/ProductionButton.gd" id="1_button"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ProductionButton" type="PanelContainer"]
custom_minimum_size = Vector2(180, 140)
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_button")
script = ExtResource("1_button")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 0

[node name="IconRect" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Scout Drone"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CostContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="Separator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
text = "Build: 5s"
horizontal_alignment = 1

[node name="MultiplierLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "x1.2 (have 2)"
horizontal_alignment = 1

[node name="BuildButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Build"

